--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,4 @@
 [server]
-port=8502 # change port number. By default streamlit uses 8501 port
-headless=true # This will eliminate automatically open browser
-[browser] # This ip and port will show in command prompt
-serverAddress = "aquadviser.com" # Put your Local IP or Domain Name
-serverPort = 8502
+headless=true
+[browser]
+gatherUsageStats = false
